<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/dropdown_lyt"

    android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp" >


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Ride Type*"
                android:layout_weight="2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>


        </LinearLayout>





                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:layout_weight="1"
                        android:text="Mazda"
                        android:id="@+id/Mazda"
                        android:layout_marginHorizontal="2dp"
                        android:textSize="17sp"
                        android:textColor="@color/lightgray"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        tools:targetApi="lollipop" />




                    <RadioButton
                        android:onClick="onRadioButtonClicked"
                        android:layout_weight="1"
                        android:layout_width="30dp"
                        android:id="@+id/Pickup"
                        android:layout_height="30dp"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        android:text="Pickup"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="2dp"
                        android:textColor="@color/lightgray"/>



                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:onClick="onRadioButtonClicked"
                        android:id="@+id/Loader"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        android:text="@string/bike"
                        android:visibility="gone"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="2dp"
                        android:textColor="@color/lightgray"
                    />


                </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:id="@+id/Shahzor"
                    android:layout_height="30dp"
                    android:onClick="onRadioButtonClicked"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:text="Shahzore"
                    android:layout_marginHorizontal="2dp"
                    android:textSize="17sp"
                    android:textColor="@color/lightgray"/>


                <RadioButton
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/drone"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:text="@string/drone"
                    android:textColor="@color/lightgray"
                    android:textSize="17sp" />



                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/truck"
                    android:onClick="onRadioButtonClicked"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:text="@string/truck"
                    android:textSize="17sp"
                    android:textColor="@color/lightgray"/>


</TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="15dp" >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/photo_of_the_vehical"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:textColor="@color/lightgray"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:id="@+id/ADDvehical"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_ed_txt"
                    android:src="@drawable/ic_baseline_add_24"
                    android:padding="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp" >


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/photo_of_driver_license"
                android:layout_weight="2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:id="@+id/ADDlicence"
                android:layout_height="match_parent"
                android:background="@drawable/background_ed_txt"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="8dp"/>

        </LinearLayout>


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/years_of_production"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
             android:gravity="center_vertical"
             android:lines="1"
             android:textColor="@color/lightgray"
             android:textStyle="bold"/>

         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="number"
             android:background="@android:color/transparent"
             android:lines="1"
             android:id="@+id/Yearofprodtution"
             android:gravity="center"
             android:hint="@string/yyyy" />
     </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Number plate"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="@color/lightgray"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:lines="1"
            android:id="@+id/carnumber"
            android:gravity="center"
            android:hint="LXY1122" />
    </LinearLayout>








</LinearLayout>
