<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical"
    android:id="@+id/bg"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/log_in"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="35sp"/>
    <RelativeLayout

        android:background="@drawable/cardview_background"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="50dp"
        android:layout_height="match_parent">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_below="@+id/etEmail"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"/>
        <TextView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:id="@+id/note"

            android:textColor="@color/lightgray"
            android:textSize="14sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="8dp"
            android:layout_marginHorizontal="50dp"
            app:cardBackgroundColor="@color/lightgray"
            android:layout_gravity="bottom"
            android:visibility="visible"


            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"


            >
        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="Sign in"
            />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>